burger behind bug actually fixed

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -58,6 +58,8 @@ header
     transform: translateY(24px)
 
 /* ANIMATION
+.menu-btn.open
+  padding: 2px
 
 .menu-btn.open .menu-btn__burger
   transform: translateX(-50px)
